终端可以计时，超过2分钟5秒没收到心跳包则判断下线；增加每个终端点开菜单按钮单击事件处理函数体；增加一些CommandType的枚举类型。

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="ReadPointInfo">读取单点配置信息</string>
     <string name="GetPointRailInfo">获取单点铁轨信息</string>
     <string name="GetHistory">获取历史</string>
+    <string name="zero">0</string>
 
 </resources>
