--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="pop_left">弹出左侧菜单</string>
     <string name="open">打开</string>
     <string name="close">关闭</string>
+    <string name="subscribe">订阅所有铁轨信息</string>
+    <string name="unsubscribe">取消订阅所有铁轨信息</string>
 
 </resources>
