--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="inputDateEnd">选择结束日期</string>
     <string name="inputTimeStart">选择起始时间</string>
     <string name="inputTimeEnd">选择结束时间</string>
+    <string name="PointConfigInfo">单点配置信息</string>
+    <string name="flashValidOrNot">Flash是否有效</string>
 
 </resources>
