获取日期和时间窗口添加“到现在”按钮，可以快速添加结束时间；添加日期或时间TextView的为空判断，添加结束时间早于或等于开始时间的判断。

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="inputTimeEnd">选择结束时间</string>
     <string name="PointConfigInfo">单点配置信息</string>
     <string name="flashValidOrNot">Flash是否有效</string>
+    <string name="ToNow">到现在</string>
 
 </resources>
