--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="home">主页</string>
     <string name="command">指令</string>
     <string name="history">历史</string>
+    <string name="data">数据</string>
     <string name="description">图片</string>
     <string name="connect">连接</string>
     <string name="edit">编辑</string>
