添加测试按钮，测试创建xml文件路径是否正确；完善FileRailInfoXmlParser类，可以创建文件。

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="strRail1RightSignalAmplitude">轨1右信号幅值</string>
     <string name="strRail2LeftSignalAmplitude">轨2左信号幅值</string>
     <string name="strRail2RightSignalAmplitude">轨2右信号幅值</string>
+    <string name="test">测试</string>
 
 </resources>
